--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Don\'t miss places</string>
-    <string name="title_activity_maps">Map</string>
 
     <string name="service_start">Activating logging service</string>
     <string name="service_gpsstatus">Logging: %1$s (%2$s with %3$d satellites)</string>
@@ -287,5 +286,11 @@ Enter number of feet for acres/hour or meters for use in hectares/hour.\n </stri
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+    <string name="title_activity_history_tracks">History tracks</string>
+    <!--
+    ***************************
+    Main menu
+    ***************************
+    -->
 
 </resources>
