--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -286,13 +286,14 @@ Enter number of feet for acres/hour or meters for use in hectares/hour.\n </stri
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
-    <string name="title_activity_history_tracks">History tracks</string>
 
     <!--
     ***************************
     Main menu
     ***************************
     -->
+    <string name="title_activity_history_tracks">History tracks</string>
+    <string name="title_activity_saved_places">Saved Places</string>
 
     <!--
     ***************************
