--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -309,12 +309,13 @@ Enter number of feet for acres/hour or meters for use in hectares/hour.\n </stri
 
     <!--
     ***************************
-    Settings
+    PreferenceSettings
     ***************************
     -->
     <!-- Map settings -->
     <string name="pref_header_map">Map</string>
 
+    <string name="pref_settings_title_map_provider_key">settings_map_provider_key</string>
     <string name="pref_settings_title_map_provider">Map provider</string>
     <string-array name="pref_settings_titles_map_provider">
         <item>Open Street Map</item>
