--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -390,4 +390,7 @@ Enter number of feet for acres/hour or meters for use in hectares/hour.\n </stri
     <string name="pref_settings_log_clear_key">settings_log_clear_key</string>
     <string name="pref_settings_log_text">settings_log_text</string>
 
+    <!-- action place btn -->
+    <string name="btn_person_pin_white_text">PIN</string>
+
 </resources>
