add line actv dnms

--- a/dontmissstation/src/main/res/values/strings.xml
+++ b/dontmissstation/src/main/res/values/strings.xml
@@ -74,5 +74,13 @@
     <string name="add_subway_city_subway_lines">Lines</string>
     <string name="add_subway_city_subway_add_new_line">Add line</string>
     <string name="title_activity_add_new_subway">AddNewSubwayActivity</string>
+    <string name="title_activity_add_subway_line">AddSubwayLineActivity</string>
+
+
+    <!--
+        Add subway line
+    -->
+    <string name="add_subway_line_name">Name*</string>
+    <string name="add_subway_line_color">Color*</string>
 
 </resources>
